--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -203,8 +203,8 @@ p a, p a:hover, p a:visited {
   padding:50px 0;
 }
 
-.about{
-  margin-bottom: 50px;
+#about{
+  padding: 150px 0px;
 }
 
 .projects{
